# GRAIL

./: README.md
01_simulation/: sionna_gnss_pipeline.py  smart_sampler.py
02_ml_pipeline/: train_classifier.py
03_uav_sim/: uav_altitude_sim.py
04_sim2real/: sim2real_transfer.py
data/: real_gnss_features.csv  real_log_summary.csv  sampling_points_v6.csv
gnss_vim_sim/: .gitignore  LICENSE  README.md  pyproject.toml
gnss_vim_sim/configs/: iitm_demo.json  mission_config.json
gnss_vim_sim/demo_project/: README.md
gnss_vim_sim/docs/: architecture.md  model_adapter.md  open_source_readiness.md  runbook.md
gnss_vim_sim/src/gnss_vim_sim/: __init__.py  cli.py
gnss_vim_sim/src/gnss_vim_sim/assets/: __init__.py  demo_config.json
gnss_vim_sim/src/gnss_vim_sim/assets/demo_mesh/: demo_scene.ply
gnss_vim_sim/src/gnss_vim_sim/core/: config.py  validation.py
gnss_vim_sim/src/gnss_vim_sim/estimators/: __init__.py
gnss_vim_sim/src/gnss_vim_sim/io/: __init__.py  init_project.py
gnss_vim_sim/src/gnss_vim_sim/ml/: runtime.py
gnss_vim_sim/src/gnss_vim_sim/planning/: interactive.py  router.py
gnss_vim_sim/src/gnss_vim_sim/sensors/: baro.py  gnss.py
gnss_vim_sim/src/gnss_vim_sim/sim/: metrics.py  runner.py
gnss_vim_sim/src/gnss_vim_sim/viz/: __init__.py  planner_html.py  player.py  plots.py
gnss_vim_sim/src/gnss_vim_sim/world/: __init__.py  osm_builder.py
gnss_vim_sim/tests/: test_config_validation.py  test_init_project.py  test_runtime_model.py
models/: xgboost_classifier_v2.pkl  xgboost_regressor.pkl
real_data/: gnss_log_2026_01_28_16_01_03.txt  (+4 more)
